<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="news"
            type="com.mohammadreza.news.viewmodel.NewsViewModel" />

        <variable
            name="view"
            type="android.view.View" />

    </data>


    <RelativeLayout
        android:id="@+id/relativeNewsActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/mAppBar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_54dp"
            android:layout_alignParentTop="true"
            android:background="@color/app_bar_color"
            android:paddingEnd="@dimen/_16dp"
            android:paddingRight="@dimen/_16dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarNewsMainPAge"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_54dp"
                android:theme="@style/ToolbarStyle"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/btnBackPhone"
                        android:layout_width="@dimen/_32dp"
                        android:layout_height="@dimen/_32dp"
                        android:onClick="@{v -> news.onClickBack()}"
                        android:scaleType="centerInside"
                        app:srcCompat="@drawable/ic_left_arrow" />

                    <TextView
                        android:id="@+id/txtNewsCategory"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@{news.newsCategory}"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_22sp" />


                </LinearLayout>

            </androidx.appcompat.widget.Toolbar>


        </com.google.android.material.appbar.AppBarLayout>


        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinatorRecyclerNews"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/mAppBar">

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/swipeRefreshLayoutNews"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:onRefreshListener="@{() -> news.onRefresh()}"
                app:refreshing="@{news.isRefreshLoading}">


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:recycler_news="@{news.mutableLiveData}"
                    app:url_category="@{news.newsCategory}" />

            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_go_to_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/app_bar_color"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/_16dp"
                android:onClick="@{v -> news.onClickArrowUp(v ,recyclerView)}"
                android:scaleType="center"
                app:layout_anchor="@id/recyclerView"
                app:layout_anchorGravity="bottom|right|end"
                app:layout_collapseMode="parallax"
                app:maxImageSize="@dimen/_22dp"
                app:srcCompat="@drawable/ic_arrow_up"
                tools:targetApi="lollipop" />


        </androidx.coordinatorlayout.widget.CoordinatorLayout>


        <LinearLayout
            android:id="@+id/mLinearProgressNewsActivity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/mAppBar"
            android:background="#fff"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="@{news.isLinearProgressLoadDataVisible}">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/mLinearNoAccessToNetNewsActivity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/mAppBar"
            android:background="#fff"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="@{news.isLinearNoAccessToNetVisible}">

            <ImageView
                android:layout_width="@dimen/_40dp"
                android:layout_height="@dimen/_40dp"
                app:srcCompat="@drawable/ic_empty_wifi" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8dp"
                android:text="@string/no_access_to_net"
                android:textSize="@dimen/_15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_32dp"
                    android:layout_height="@dimen/_32dp"
                    android:layout_marginEnd="@dimen/_8dp"
                    android:layout_marginRight="@dimen/_8dp"
                    app:srcCompat="@drawable/ic_check_internet" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/check_network_settings"
                    android:textSize="@dimen/_15sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btnTryAgainNewsActivity"
                android:layout_width="120dp"
                android:layout_height="@dimen/_32dp"
                android:layout_marginTop="@dimen/_8dp"
                android:background="@color/colorError"
                android:onClick="@{v ->news.onClickTryAgain(v)}"
                android:text="@string/try_again"
                android:textColor="#fff" />


        </LinearLayout>


    </RelativeLayout>


</layout>